be finalized, new jwt and login endpoint